fix line-clamp bottom border alignment

--- a/1_2_basic_html/css/style.css
+++ b/1_2_basic_html/css/style.css
@@ -46,7 +46,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding-top: 0 !important;
-  padding-bottom: 0 !important;
+  padding-bottom: 4.7rem !important;
   -webkit-line-clamp: 3;
 }
 
